project/stage/tests/reject/bad_print_statement.ul
void main(){
  int[10] list;
  print list;
  println list;
}